# ML_Cla_Flask

./: .pre-commit-config.yaml  README.md  app.py  pyproject.toml  requirements.txt
model/: diabetes_model.pkl  model.ipynb  patient.ipynb  pca.pkl  scaler.pkl
static/: dash.css  data.css  login.css  styles.css
templates/: dashboard.html  data.html  index.html  login.html
