[project]
name = "ml-cla-flask"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asttokens>=3.0.0",
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "nbformat>=5.10.4",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "psycopg2>=2.9.10",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "shap>=0.48.0",
    "xgboost>=3.0.5",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]

[tool.ruff]
line-length = 100
